<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    android:background="@color/white"
    tools:context=".ui.penjemputanSampah.detail.DetailPenjemputanSampahActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Start of AppBar  -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/greenDark"
            app:navigationIconTint="@color/white"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjemputan_sampah"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <!-- End of AppBar  -->

    <!--  Start of Layout Nama Pengguna  -->
    <LinearLayout
        android:id="@+id/layout_namaPengguna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_titlenamaPengguna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_nama_pengguna"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namaPenggunaEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_textfield_outlined"
            app:hintEnabled="false">

            <TextView
                android:id="@+id/subtitle_namaPengguna"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/title_nama_pengguna"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Nama Pengguna  -->

    <!--  Start of Layout Kategori Sampah  -->
    <LinearLayout
        android:id="@+id/layout_kategoriSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_namaPengguna">

        <TextView
            android:id="@+id/tv_titleKategoriSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori_sampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kategoriSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:background="@drawable/bg_textfield_outlined">

            <TextView
                android:id="@+id/subtitle_kategoriSampah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/kategori_sampah"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!--  End of Layout Kategori Sampah  -->

    <!--  Start of Layout Berat Sampah  -->
    <LinearLayout
        android:id="@+id/layout_beratSampah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_kategoriSampah"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_beratSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_sampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/beratSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:background="@drawable/bg_textfield_outlined"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/subtitle_beratSampah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/berat_sampah"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Berat Sampah  -->

    <!--  Start of Layout Harga Sampah  -->
    <LinearLayout
        android:id="@+id/layout_hargaSampah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_kategoriSampah"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical">

        <TextView
            android:id="@+id/tv_hargaSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_sampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hargaSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_textfield_outlined"
            app:hintEnabled="false">

            <TextView
                android:id="@+id/subtitle_hargaSampah"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="17dp"
                android:text="@string/harga_sampah"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Harga Sampah  -->


    <!--  Start of Layout Tanggal Penjemputan  -->
    <LinearLayout
        android:id="@+id/layout_tanggalPenjemputan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_hargaSampah"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_tanggalPenjemputan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_penjemputan"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tanggalPenjemputanEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_textfield_outlined"
            app:hintEnabled="false">

            <TextView
                android:id="@+id/subtitle_tanggalPenjemputan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/tanggal_penjemputan"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Tanggal Penjemputan  -->

    <!--  Start of Layout Alamat Penjemputan  -->
    <LinearLayout
        android:id="@+id/layout_alamatPenjemputan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_tanggalPenjemputan"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_alamatPenjemputan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_penjemputan"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alamatPenjemputanEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:background="@drawable/bg_textfield_outlined"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/subtitle_alamatPenjemputan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/alamat_penjemputan"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout alamat Penjemputan  -->


    <!--  Start of Layout Catatan Tambahan  -->
    <LinearLayout
        android:id="@+id/layout_catatanTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_alamatPenjemputan"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_catatanTambahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catatan"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/catatanTambahanEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textfield_outlined"
            app:hintEnabled="false"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/subtitle_catatan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/catatan"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/greenDeep"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Catatan Tambahan  -->

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:minHeight="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_catatanTambahan"/>

    <!--  Start of Button Simpan  -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_simpan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/greenDark"
            android:minHeight="50dp"
            android:text="@string/simpan"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_status" />
    <!--  End of Button Simpan  -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>