<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Material3.DayNight.NoActionBar"
    android:background="@color/white"
    tools:context=".ui.settingHarga.AddEditSettingHargaActivity">

    <!-- Start of AppBar  -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/greenDark">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_marginEnd="10dp"
                android:tint="@color/white"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/titleAppBar_editDanTambahSampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/setting_harga"
                android:src="@drawable/ic_baseline_delete_24"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"
                android:tint="@color/white"
                tools:ignore="UseAppTint" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <!-- End of AppBar  -->

    <!--  Start of Layout Jenis Sampah  -->
    <LinearLayout
        android:id="@+id/layout_jenisSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_jenisSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_jenisSampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jenisSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_jenisSampah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/title_jenisSampah"
                android:textColorHint="@color/greenMedium"
                android:minHeight="50dp"
                android:background="@drawable/bg_textfield_outlined"
                android:layout_width="match_parent"
                android:textColor="@color/greenDeep"
                android:autofillHints="name"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!--  End of Layout Jenis Sampah  -->

    <!--  Start of Layout Harga Sampah  -->
    <LinearLayout
        android:id="@+id/layout_hargaSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_jenisSampah"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_hargaSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_sampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hargaSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_hargaSampah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/harga_sampah"
                android:textColorHint="@color/greenMedium"
                android:minHeight="50dp"
                android:background="@drawable/bg_textfield_outlined"
                android:layout_width="match_parent"
                android:textColor="@color/greenDeep"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!--  End of Layout Harga Sampah  -->

    <!--  Start of Button Register  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/greenDark"
        android:text="@string/simpan"
        android:minHeight="50dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_hargaSampah" />
    <!--  End of Button Register  -->

</androidx.constraintlayout.widget.ConstraintLayout>